force-app/main/default/objects/LeanData__Temporary_Marketing_Touch__c/fields/LeanData__Attribution_Value__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Attribution_Value__c</fullName>
    <label>Attribution Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>