force-app/main/default/objects/LeanData__Temporary_Marketing_Touch__c/fields/LeanData__Campaign_Member_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign_Member_Created_Date__c</fullName>
    <label>Campaign Member Created Date</label>
    <type>DateTime</type>
</CustomField>