force-app/main/default/objects/LeanData__Temporary_Marketing_Touch__c/fields/LeanData__MT_Attribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>LeanData__MT_Attribution_Amount__c</fullName>
    <formula>LeanData__Attribution_Value__c * LeanData__MT_Attribution_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MT Attribution Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>